<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/userGuideFragment"
        android:icon="@drawable/ic_nav_user_guide"
        android:title="@string/nav_user_guide" />

    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_nav_settings"
        android:title="@string/nav_settings" />

    <item
        android:id="@+id/supportFragment"
        android:icon="@drawable/ic_nav_support"
        android:title="@string/nav_support" />

</menu>
